Changelog
=========

1.2.5 (unreleased)
------------------

- define class .breadcrumbSeparator, which is referred to in plone.app.layout
  and plone.app.search, but wasn't in Sunburst. Set a color on it, because
  the separator character was changed (see https://dev.plone.org/ticket/12904)
  The color chosen is WCAG2.0 compliant in contrast.
  [polyester]

- Set "display: block; font-weight:normal" on .formHelp in forms.css.dtml to 
  assure that field help displays well even if it is formatted as a span 
  inside the label for accessibility.
  [smcmahon]

- Change form tab style selectors from '#content' to '#content-core' so form
  tabs work in both content and overlays.
  [davidjb]

- Fix vertical alignment of listing table cells when content type icons are 
  enabled.
  [esteele]


1.2.4 (2012-05-07)
------------------

- Add selector for AT required field icon
  [tom_gross]

- Use CSS :content selector to inject required icon instead of image
  [tom_gross]

1.2.3 (2012-04-15)
------------------

- Move .row and .cell styles from footer.pt to Sunburst main_template.
  Fixes https://dev.plone.org/ticket/12156
  [agnogueira]

- fix 'device-width;" for key "width" not recognized in chrome' in javascript console  
  [eleddy]

- Fix view windw error in chrome
  [plone konferenz coding dojo]


1.2.2 (2012-02-07)
------------------

- Fix the styling of the standalone @@historyview view used when
  overlays are turned off.
  [rossp]


1.2.1 (2011-08-25)
------------------

- Put #search-results-bar on a lower CSS layer to not overlap the livesearch 
  [spliter]
 
1.2 - 2011-07-19
----------------

- Switch to HTML5 doctype. References http://dev.plone.org/plone/ticket/11300
  [spliter]

- Deprecated iefixes.js and IEFixes.css after we have introduced Modernizr.
  References http://dev.plone.org/plone/ticket/11300
  [spliter]

- Merge PLIP 9352. 
  [esteele]
  
- Applied styles for search filter on search results page.